# kids_learn_journey_service

./: README.md  main.py  pyproject.toml
kids-courses-api/: README.md  pyproject.toml
kids-courses-api/kids-courses-api/kids-courses-api/: README.md  pyproject.toml
kids-courses-api/kids-courses-api/kids-courses-api/src/: app.py  types.py
kids-courses-api/kids-courses-api/kids-courses-api/src/resolvers/: users.py
kids-courses-api/kids-courses-api/kids-courses-api/tests/: test_courses.py
kids-courses-api/kids-courses-api/src/: database.py  schema.py
kids-courses-api/kids-courses-api/src/resolvers/: courses.py
kids-courses-api/kids-courses-api/tests/: test_users.py
kids-courses-api/src/: .env  app.py  database.py  models.py  schema.py  types.py
kids-courses-api/src/resolvers/: course_content.py  course_progress.py  course_ratings.py  courses.py  users.py
kids-courses-api/tests/: test_course_content.py  test_courses.py  test_users.py
