[tool.poetry]
name = "kids-courses-api"
version = "0.1.0"
description = "A GraphQL API for managing kids courses and user accounts."
authors = ["Your Name <youremail@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
strawberry-graphql = "^0.17.0"
motor = "^2.5.1"
uvicorn = "^0.15.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"